--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
   <div id="turn-display" style="margin-bottom: 10px; font-weight: bold;"></div>
 
   <!-- 상대방 영역 -->
-  <div class="board-grid opponent-area" id="opponent-expeditions"></div>
+  <div class="board-grid opponent-area-card" id="opponent-expeditions"></div>
   <div class="score-row opponent-area" id="opponent-scores"></div>
 
   <!-- 버리는 카드 영역 -->
@@ -19,8 +19,8 @@
     </div>
 
   <!-- 내 영역 -->
-  <div class="board-grid player-area" id="player-expeditions"></div>
   <div class="score-row player-area" id="player-scores"></div>
+  <div class="board-grid player-area-card" id="player-expeditions"></div>
 
   <!-- 내 손패 -->
   <div class="hand" id="hand"></div>
