--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
 
   <!-- 내 손패 -->
   <div class="hand" id="hand"></div>
-  <button id="draw-btn">카드 뽑기</button>
+  <button id="draw-btn" class="draw-btn">카드 뽑기</button>
 
   <script type="module" src="game.js"></script>
 </body>
