--- a/join.html
+++ b/join.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>게임 참가</title>
+  <link rel="stylesheet" href="join.css">
 </head>
 <body>
-  <h2>로스트 시티 - 참가하기</h2>
-  <input type="text" id="room-id" placeholder="방 ID">
-  <input type="text" id="player-name" placeholder="닉네임">
-  <button id="join-btn">입장</button>
+  <div class="join-field">
+    <h2>LOST CITIES</h2>
+    <input type="text" id="room-id" placeholder="방 ID">
+    <input type="text" id="player-name" placeholder="닉네임">
+    <button id="join-btn">입장</button>
+    </div>
 
   <script type="module">
     import { joinRoom, initGameState } from "./room.js";
@@ -18,7 +21,7 @@
       const roomId = document.getElementById("room-id").value.trim();
       const playerName = document.getElementById("player-name").value.trim();
 
-      if (!roomId || !playerName) return alert("정보를 모두 입력하세요.");
+      if (!roomId || !playerName) return alert("방 ID와 닉네임을 모두 입력하세요.");
 
       const playerId = await joinRoom(roomId, playerName);
       if (!playerId) return;
