--- a/join.html
+++ b/join.html
@@ -11,7 +11,8 @@
     <input type="text" id="room-id" placeholder="방 ID">
     <input type="text" id="player-name" placeholder="닉네임">
     <button id="join-btn">입장</button>
-    </div>
+  </div>
+  <div id="version", class="version">v0.0.3</div>
 
   <script type="module">
     import { joinRoom, initGameState } from "./room.js";
