배경 및 카드 스타일 고도화

--- a/join.html
+++ b/join.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="join-field">
-    <h2>LOST CITIES</h2>
+    <img src="res/logo.png" alt="로고" class="logo">
     <input type="text" id="room-id" placeholder="방 ID">
     <input type="text" id="player-name" placeholder="닉네임">
     <button id="join-btn">입장</button>
