--- a/game.html
+++ b/game.html
@@ -42,9 +42,29 @@
       </div>
     </div>
   </div>
+  <!-- 무지개 11 카드 놓기 모달 -->
+  <div id="rainbow11-modal" class="modal" style="display:none;">
+    <div class="modal-content">
+      <p>무지개 11 카드를 놓을 색상을 선택하세요:</p>
+      <div id="rainbow11-color-list" class="modal-buttons" style="display:flex; gap: 10px; justify-content:center;"></div>
+      <button id="rainbow11-cancel" class="modal-cancelbtn" style="margin-top:20px;">취소</button>
+    </div>
+  </div>
+  <!-- 무지개 11 카드 버리기 모달 -->
+  <div id="modal-discard-rainbow" class="modal" style="display:none;">
+  <div class="modal-content">
+    <p>무지개 카드를 버릴 곳의 색상을 선택하세요:</p>
+    <div id="discard-rainbow-color-list" class="modal-buttons" style="display:flex; gap: 10px; justify-content:center;"></div>
+    <button id="discard-rainbow-cancel" class="modal-cancelbtn" style="margin-top:20px;">취소</button>
+  </div>
+</div>
+
+
 
   <button id="draw-btn" class="draw-btn">카드 뽑기</button>
 
   <script type="module" src="game.js"></script>
+  <script type="module" src="extension.js"></script>
+
 </body>
 </html>
