--- a/game.html
+++ b/game.html
@@ -6,10 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>로스트 시티</h1>
   <div id="player-names" style="margin-bottom: 10px;">
-    <span id="opponent-name" style="font-weight: bold; color: darkred;">상대: </span> |
-    <span id="my-name" style="font-weight: bold; color: darkblue;">나: </span>
+    <span id="opponent-name" style="font-weight: bold; color: darkred;"></span> vs 
+    <span id="my-name" style="font-weight: bold; color: darkblue;"></span>
   </div>
   <div id="turn-display" style="margin-bottom: 10px; font-weight: bold;"></div>
   <div id="deck-count" style="margin-bottom: 10px; font-weight: bold; color: teal;">남은 카드: 0장</div>
